--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -16,6 +16,11 @@
 
 .hero_section {
   height: 100vh;
+  padding-top: 295px;
+  background-image: url('../images/ryu_acupuncture.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  opacity: 1;
 }
 
 .main_container {
@@ -151,16 +156,12 @@
   background-attachment: fixed;
 }
 
-.background-video {
-  height: 100vh;
-  text-shadow: 1px 1px 6px #000;
-}
-
 .ryu_title {
-  margin-top: 352px;
+  margin-top: 0px;
   margin-right: auto;
   margin-left: auto;
   font-family: Inter, sans-serif;
+  color: #fafafa;
   font-size: 80px;
   line-height: 80px;
   text-align: center;
@@ -171,7 +172,7 @@
   position: relative;
   overflow: hidden;
   height: 500px;
-  background-image: url('../images/ryu_acupuncture.jpg');
+  background-image: url('../images/acupuncture_needles_on_rock.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -180,6 +181,7 @@
 
 .ryu_tagline {
   font-family: Inter, sans-serif;
+  color: #fafafa;
   font-style: italic;
   text-align: center;
   text-shadow: 2px 2px 3px #3898ec;
@@ -1296,153 +1298,6 @@
   font-weight: 700;
 }
 
-.photo {
-  height: 800px;
-}
-
-.photo._6 {
-  background-image: url('../images/heat_lamp_therapy.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.photo._4 {
-  background-image: url('../images/ear_acupuncture.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.photo._1 {
-  background-image: url('../images/acupuncture_treatment.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.photo._3 {
-  background-image: url('../images/cupping_treatment.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.photo._5 {
-  background-image: url('../images/moxibustion_treatment.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.photo._2 {
-  background-image: url('../images/traditional_chinese_herbal_medicine.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.services_picture_section {
-  position: relative;
-  display: none;
-}
-
-.content-holder {
-  position: relative;
-  height: 100%;
-}
-
-.the-content {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.the-content._1 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #81bdf2;
-  color: #fff;
-}
-
-.the-content._2 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #5caaef;
-  color: #fff;
-}
-
-.the-content._5 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #126ebe;
-  color: #fff;
-}
-
-.the-content._3 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #3898ec;
-  color: #fff;
-}
-
-.the-content._6 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #0e5899;
-  color: #fff;
-}
-
-.the-content._4 {
-  display: block;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: #1583e4;
-  color: #fff;
-}
-
-.column-2 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 60px;
-  height: 100vh;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-
 .services_content_h3 {
   display: block;
   margin-top: 0px;
@@ -1454,13 +1309,6 @@
   font-weight: 700;
   text-align: center;
   text-shadow: 1px 1px 1px #3898ec;
-}
-
-.column-1 {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
 }
 
 .services_para {
@@ -2686,6 +2534,15 @@
 }
 
 @media screen and (min-width: 1440px) {
+  .hero_section {
+    padding-top: 325px;
+    background-image: url('../images/ryu_acupuncture.jpg');
+  }
+
+  .parallax_block_needles {
+    background-image: url('../images/acupuncture_needles_on_rock.jpg');
+  }
+
   .ryu_body {
     font-size: 15px;
     line-height: 22.5px;
@@ -2725,6 +2582,10 @@
 }
 
 @media screen and (max-width: 991px) {
+  .hero_section {
+    padding-top: 75px;
+  }
+
   .main_container {
     width: 90vw;
   }
@@ -2918,22 +2779,6 @@
     width: 60%;
   }
 
-  .the-content._2 {
-    display: block;
-  }
-
-  .the-content._5 {
-    display: block;
-  }
-
-  .the-content._3 {
-    display: block;
-  }
-
-  .the-content._6 {
-    display: block;
-  }
-
   .services_content_h3 {
     font-size: 40px;
     line-height: 40px;
@@ -3117,6 +2962,10 @@
 }
 
 @media screen and (max-width: 767px) {
+  .hero_section {
+    padding-top: 40px;
+  }
+
   ._2_block {
     width: 100%;
   }
@@ -4128,30 +3977,10 @@
     flex: 1;
   }
 
-  .photo._1 {
-    display: block;
-  }
-
-  .services_picture_section {
-    display: none;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-
   .services_content_h3 {
     -webkit-transform: rotate(-90deg);
     -ms-transform: rotate(-90deg);
     transform: rotate(-90deg);
-  }
-
-  .column-1 {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
   }
 
   .services_intro_section {
